// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<img
  alt="__ALT__"
  className="root objectFit-cover"
  src="__SRC__"
  style={
    Object {
      "height": "100px",
      "width": "100px",
    }
  }
/>
`;

exports[`Button renders with borderRadiusLeft 1`] = `
<img
  alt="__ALT__"
  className="root borderRadiusLeft"
  src="__SRC__"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
/>
`;
